--- a/src/config_json.json
+++ b/src/config_json.json
@@ -1,6 +1,7 @@
 {
   "data_format": "json",
-  "site_map": "../code_management/github_scrap_personal_projects.json",
+  "site_map": "../site_maps/code_management/github_scrap_personal_projects.json",
   "start_urls": ["https://github.com/MajorZiploc?tab=repositories"],
-  "output_file_name_seed": "../output"
+  "output_file_name_seed": "../output",
+  "sort_by": ["-main_language", "languages"]
 }
