+ web-scraper-order hint for sorting

--- a/src/config_json.json
+++ b/src/config_json.json
@@ -3,5 +3,5 @@
   "siteMap": "../site_maps/code_management/github_scrap_personal_projects.json",
   "startUrls": ["https://github.com/MajorZiploc?tab=repositories"],
   "output_file_name_seed": "../output",
-  "sortBy": ["-main_language", "languages"]
+  "sortBy": ["-main_language", "languages", "web-scraper-order"]
 }
